syntax = "proto3";

package discounts;

import "order.proto";

option go_package = "github.com/odyssey121/proto_services_go/protos/golang/discounts";


service DiscountService {
    rpc MakeDiscount (MakeDiscountRequest) returns (MakeDiscountResponse);
}


message MakeDiscountRequest {
    string user_id = 1;
    repeated orders.OrderItem items = 2;
    string payment_method = 4;
}


message MakeDiscountResponse {
    bool success = 1;
    uint32 discount_amount = 2;
    string message = 3;
}